@@ -1,4 +1,5 @@
 13/3/12 started 7.28.2
+- xres/yres tiffsave args were broken
 
 13/3/12 started 7.28.1
 - add ICC profile read/write for png files
